--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
-apply plugin: 'java'
-apply plugin: 'groovy'
-apply plugin: 'eclipse'
-
-repositories {
-    mavenCentral()
- }
+buildscript {
+  repositories {
+      mavenCentral()
+        }
+	  dependencies {
+	      classpath 'org.gradle.api.plugins:gradle-android-plugin:1.1.0'
+	        }
+		}
+		apply plugin: 'android'
+		repositories {
+		    mavenCentral()
+		    }
